--- a/SEO-API/appsettings.json
+++ b/SEO-API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  {
+    "ConnectionStrings": {
+      "BloggingDatabase": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
