--- a/SEO-API/appsettings.json
+++ b/SEO-API/appsettings.json
@@ -1,7 +1,7 @@
 {
   {
     "ConnectionStrings": {
-      "BloggingDatabase": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
+      "SeoAPIDatabase": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
     }
   },
   "Logging": {
