--- a/ReactApp/ClientApp/package.json
+++ b/ReactApp/ClientApp/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "ajv": "^6.8.1",
     "bootstrap": "^4.3.1",
-    "jquery": "3.3.1",
+    "jquery": "^3.4.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
