Add readme and Hangfire.

--- a/SEO-API/appsettings.json
+++ b/SEO-API/appsettings.json
@@ -1,10 +1,13 @@
 {
   "ConnectionStrings": {
-    "SeoAPIDatabase": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
+    "SeoAPIDatabase": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;",
+    "HangfireDatabase": "Server=localhost\\SQLEXPRESS;Database=HangfireDB;Trusted_Connection=True;"
+
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Warning",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*"
