--- a/SEO-API/SEO-API.csproj
+++ b/SEO-API/SEO-API.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="HangFire" Version="1.7.6" />
+    <PackageReference Include="HangFire.Core" Version="1.7.6" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
