Check if already exists.

--- a/SEO-API/appsettings.json
+++ b/SEO-API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "SeoAPIDatabase": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;",
-    "HangfireDatabase": "Server=localhost\\SQLEXPRESS;Database=HangfireDB;Trusted_Connection=True;"
+    "HangfireDatabase": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
 
   },
   "Logging": {
