--- a/SEO-API/appsettings.json
+++ b/SEO-API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "NumberOfResults": 100
+  },
   "ConnectionStrings": {
     "SeoAPIDatabase": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;",
     "HangfireDatabase": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
